<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_decks"
            android:icon="@drawable/baseline_auto_awesome_motion_24"
            android:title="@string/menu_decks" />
        <item
            android:id="@+id/nav_browser"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_browser" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/baseline_align_vertical_bottom_24"
            android:title="@string/menu_statistics" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/menu_settings" />
    </group>
</menu>