<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_decks">

    <fragment
        android:id="@+id/nav_decks"
        android:name="com.example.flashdeck.ui.home.HomeFragment"
        android:label="@string/menu_decks"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_browser"
        android:name="com.example.flashdeck.ui.gallery.GalleryFragment"
        android:label="@string/menu_browser"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.example.flashdeck.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.flashdeck.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>