<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">


    <Button
        android:id="@+id/settings_btnSync"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:text="@string/settings_btnSync"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />

    <Button
        android:id="@+id/settings_btnGeneral"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:text="@string/settings_btnGeneral"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098" />

    <Button
        android:id="@+id/settings_btnNotifications"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:text="@string/settings_btnNotifications"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195" />

    <Button
        android:id="@+id/settings_btnAccount"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:text="@string/settings_btnAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381" />
</androidx.constraintlayout.widget.ConstraintLayout>